# CSCE-3444-TEAM-2-Taskforce-Titans

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  Makefile  README.md  app.js  assignments.json  cmake_install.cmake  index.html  link  main.cpp  package-lock.json  package.json  preview (1).html  preview.html  server.js  styles.css
backend/: main.cpp
backend/data/: assignments.json
frontend/: app.js  index.html  server.js
